--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li>Plant-based cooking</li>
 				<li>Making coffee</li>
 			</ol>
-			<img class="big-image" src="img/big-image.jpg">
+			<img class="big-image" src="img/big-image.jpg" width="400" height="300">
 			<p class="caption"> me in my happy place</p>
 			<h2>project t2o</h2>
 			<ul>
