first commit for our portfolio page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 	<title>theyunacorn</title>
-	<link rel="stylesheet" type="text/css" href="css/test.css">
+	<link rel="stylesheet" type="text/css" href="css/portfolio.css">
 </head>
 <body>
 	<div class="wrapper">
+<!-- this is how you add a comment in html-->
 		<header>
-			<img src="img/profile.jpg"
+			<img src="img/profile.jpg">
 			<h1>theyunacorn</h1>
 		</header>
+
 		<div class="content">
 			<h2>about me</h2>
 			<p> I am 21 years old, a recent graduate of the University of Chicago, with a passion for sustainable fashion. </p>
